2014-09-06  Barton E. Schaefer  <schaefer@zsh.org>

	* 33116: Src/hist.c: followup to 32580 to prevent double-locking
	with shared or incremental history

2014-08-21  Mikael Magnusson  <mikachu@gmail.com>

	* 33061: Completion/Zsh/Command/_setopt,
	Completion/Zsh/Command/_unsetopt: More useful setopt / unsetopt
	completion.

2014-09-04  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33110: Doc/Zsh/expn.yo: document use of $IFS[1] for variable
	padding.

2014-09-04  Peter Stephenson  <p.stephenson@samsung.com>

	* Alexandre Rames: 33108: Completion/Unix/Command/_stgit:
	--patch completion.

	* 33091: Doc/Zsh/builtins.yo: improve documentation for ttyctl.

2014-09-03  Barton E. Schaefer  <schaefer@zsh.org>

	* 33100: Src/exec.c: check $fd more rigorously in "exec {fd}<&-"

	* 33088: Completion/Base/Widget/_complete_debug: indentation in $PS4

2014-09-01  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Mark Oteiza: 33081: Completion/Unix/Type/_mime_types: suppress
	error message if unnecessary file not found.

2014-08-31  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Test/A05execution.ztst: further tweaking of the
	descriptor leak regression test that sometimes hangs

	* 33077: Src/exec.c: SHTTY = -1 when closing it in closem()

2014-08-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 33070: Doc/Zsh/prompt.yo, Src/prompt.c: add %(e..) based on %e

	* 33069: Completion/Base/Completer/_expand_alias: remove internal
	quoting	before looking up aliases when expanding aliases in an
	unquoted word

2014-08-29  Peter Stephenson  <p.stephenson@samsung.com>

	* 33057: Doc/Zsh/prompt.yo, Src/prompt.c: %e in prompts shows
	evaluation / execution depth.

2014-08-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33062: Etc/zsh-development-guide: update note on use of
	.distfiles based on 33047.

	* unposted: Config/version.mk: update to 5.0.6-dev-0 for new
	commits post release.

	* unposted: Config/version.mk: 5.0.6.
